<resources>
    <string name="app_name">FinalApp</string>
    <string name="title_character">Character</string>
    <string name="title_info">Info</string>
    <string name="title_combat">Combat</string>
    <string name="title_story">Story</string>
    <string name="dia_dismiss">Cancel</string>
    <string name="dia_add">Add</string>
    <string name="Cartel">Cartel:</string>
    <string name="profession">Profession:</string>
    <string name="quirk">Quirk:</string>
    <string name="name_placeholder">Name</string>
    <string name="CharacterName">name</string>
    <string name="CartelName">cartelname</string>
    <string name="ProfName">profname</string>
    <string name="selected">Already selected</string>
    <string name="error">This does not work!</string>
    <string name="Charactername">Name: </string>
    <string name="editedText">Saved</string>
    <string name="Incon">Inconspicuous</string>
    <string name="inconPlace">"Places where inconspicuous: "</string>
    <string-array name="Cartelnames">
        <item>The Circle</item>
        <item>The Family</item>
<!--        <item>The Forgotten</item>-->
<!--        <item>The Gravediggers</item>-->
<!--        <item>The Mummers</item>-->
<!--        <item>Red Lotus Society</item>-->
<!--        <item>The Vespers</item>-->
<!--        <item>Wardens of the night</item>-->
<!--        <item>The Church</item>-->
<!--        <item>The Hanged</item>-->
<!--        <item>Independent</item>-->
    </string-array>
    <string-array name="Professionnames">
        <item>Alchemist</item>
        <item>Assassin</item>
<!--        <item>Basher</item>-->
<!--        <item>Boss</item>-->
<!--        <item>Brawler</item>-->
<!--        <item>Cleaner</item>-->
<!--        <item>Dabbler</item>-->
<!--        <item>Fixer</item>-->
<!--        <item>Grifter</item>-->
<!--        <item>Mastermind</item>-->
<!--        <item>Mole</item>-->
<!--        <item>Poisoner</item>-->
<!--        <item>Runner</item>-->
<!--        <item>Sharpshooter</item>-->
<!--        <item>Thief</item>-->
<!--        <item>Trainer</item>-->
<!--        <item>Beguiler</item>-->
<!--        <item>Dragon</item>-->
<!--        <item>Fortune teller</item>-->
<!--        <item>Hexer</item>-->
<!--        <item>Magus</item>-->
<!--        <item>Masquerader</item>-->
<!--        <item>Pallbearer</item>-->
<!--        <item>Wyr</item>-->
<!--        <item>Specter</item>-->
<!--        <item>Traveler</item>-->
    </string-array>
    <string-array name="Quirknames">
        <item>A Home in Little Taona</item>
        <item>Animal Whisperer</item>
<!--        <item>Artisan</item>-->
<!--        <item>Aura Reader</item>-->
<!--        <item>Card Sharp</item>-->
<!--        <item>Chosen of the Black Council</item>-->
<!--        <item>Chromaturgy</item>-->
<!--        <item>Disgraced Watch Officer</item>-->
<!--        <item>Diviner’s Ear</item>-->
<!--        <item>Dizzying Intellect</item>-->
<!--        <item>Dockworker</item>-->
<!--        <item>Elderlander</item>-->
<!--        <item>Escaped Final Vows</item>-->
<!--        <item>Everyman</item>-->
<!--        <item>Ex-Blooded</item>-->
<!--        <item>Ex-Con</item>-->
<!--        <item>Eye for Art</item>-->
<!--        <item>Failed Apprentice</item>-->
<!--        <item>Family Ties</item>-->
<!--        <item>Fascination with the Occult</item>-->
<!--        <item>Former Soldier</item>-->
<!--        <item>Fresh-Faced</item>-->
<!--        <item>Friendly Rival</item>-->
<!--        <item>Gossip Monger</item>-->
<!--        <item>Indebted</item>-->
<!--        <item>Iron Guts</item>-->
<!--        <item>Labor Camp Refugee</item>-->
<!--        <item>Legacy</item>-->
<!--        <item>Loan Shark</item>-->
<!--        <item>Looking to Get Out</item>-->
<!--        <item>Lucky Charm</item>-->
<!--        <item>Master Artist</item>-->
<!--        <item>Master Chef</item>-->
<!--        <item>Master Musician</item>-->
<!--        <item>Memories of a Past Life</item>-->
<!--        <item>Mentor</item>-->
<!--        <item>Object Reader</item>-->
<!--        <item>Old Flame</item>-->
<!--        <item>Orphaned Scion</item>-->
<!--        <item>Pet</item>-->
<!--        <item>Physicker</item>-->
<!--        <item>Privateer</item>-->
<!--        <item>Reader</item>-->
<!--        <item>Scribe-Perfect Memory</item>-->
<!--        <item>Shifted Allegiances</item>-->
<!--        <item>Sibling in the crew</item>-->
<!--        <item>Signature Weapon</item>-->
<!--        <item>Slum Lord</item>-->
<!--        <item>Society School Training</item>-->
<!--        <item>Stage Magician</item>-->
<!--        <item>Street Hustler</item>-->
<!--        <item>Stunning</item>-->
<!--        <item>Taonan</item>-->
<!--        <item>Tinker</item>-->
<!--        <item>Trading Company Job</item>-->
<!--        <item>Twins</item>-->
<!--        <item>Unnatural Healing</item>-->
<!--        <item>Vladich</item>-->
<!--        <item>Watcher in the Dark</item>-->
<!--        <item>Wraith Survivor</item>-->
    </string-array>
    <string name="CircleInconPlaces">Little Taonan\nMerchant district\nNoble district</string>
    <string name="FamilyInconPlaces">Little Taona\nThe dock\nThe slums</string>
    <string name="splashtitle">DCO\nCharacter App</string>
    <string name="maker">Scott Marchant - 2020</string>
    <string name="contdesc">DCO picture</string>
    <string name="CartelInfo">"Cartel"</string>

    <string name="CircleInfo">Your cartel is composed of refugees from the collapse of the Vladov
Empire, far across the sea, and the allies they have made since arriving in
New Dunhaven. Nearly every member of the cartel has spent some time in
the city’s notorious prison, the Castle, as a result of an unjust decree by the
Crown. The members of the Circle are tough, dangerous people with a reputation for
violence, valued on crews as muscle and protection. The Circle uses intimidation to
get its way, specializing in extortion, protection rackets, assassination, and coercion.</string>

    <string name="FamilyInfo">Your cartel is the oldest and largest criminal organization in the
city and the cornerstone of organized crime in New Dunhaven. The
Family controls the largest swath of contiguous turf in the city, and
oversees all crime in and around the city’s canals. Though involved in
nearly every possible criminal pursuit, members of the Family portray themselves as
legitimate businesspeople or local politicians, responsible for making sure everything
keeps running smoothly for the common people who live in their territory. The
Family is also the wealthiest cartel, and it often flaunts its riches to achieve its goals.</string>
    <string name="Profskills">Profession skills</string>
    <string name="QuirkInfo">Quirk</string>
    <string name="AlchemistSkills">Use an Alchemical Object: 90%\n
Appraise Something: 80%\n
Conceal an Object: 80%\n
Gossip with Merchants: 80%\n
Navigate Bureaucracy: 80%\n
Convince Someone: 65%\n
Outdrink Someone: 65%\n
Run Like Hell: 65%\n
Size Someone Up: 65%\n
Throw Something: 65%\n
Anything Else: 50%</string>
    <string name="AssassinSkills">Sneak Around: 90%\n
Brawl with Someone: 80%\n
Case the Joint: 80%\n
Climb, Jump, and Tumble: 80%\n
Create a Disguise: 80%\n
Shoot Someone: 80%\n
Stab Someone: 80%\n
Tail Someone: 80%\n
Conceal an Object: 65%\n
Goad Someone: 65%\n
Gossip with Commoners: 65%\n
Lie to Someone: 65%\n
Locate Someone: 65%\n
Run Like Hell: 65%\n
Anything Else: 50%</string>
    <string name="ToanaQuirk">One of the Locals\n
You are not conspicuous in Little Taona,
even if your cartel says that you normally
would be.</string>
    <string name="AnimalQuirk">Beast Language\n
Choose a particular species of animal. You
can understand and be understood by
animals of that type, and you can use skills
to interact with them verbally just as you
would with people</string>
    <string name="storytext">Story</string>
    <string name="StoryConflict">Story conflict</string>
    <string name="Rewards">Story reward</string>
    <string name="BackgroundTitle">Background</string>
    <string name="BackgroundHint">Background</string>
    <string name="StoryRewardHint">Story reward</string>
    <string name="Luck">Luck: %1s</string>
    <string name="Luckamount">0</string>
    <string name="ibMin">min</string>
    <string name="ibPlus">Plus</string>
    <string name="Wounds">Wounds:</string>
    <string name="weapon_placeholder">weapon</string>
    <string name="title_add">Add</string>
    <string name="toHit">to Hit</string>
    <string name="itemname">Item name</string>
</resources>
