<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_character">

    <fragment
        android:id="@+id/navigation_character"
        android:name="com.example.finalapp.ui.home.HomeFragment"
        android:label="@string/title_character"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.example.finalapp.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_combat"
        android:name="com.example.finalapp.ui.combat.CombatFragment"
        android:label="@string/title_combat"
        tools:layout="@layout/fragment_combat" />

    <fragment
        android:id="@+id/navigation_story"
        android:name="com.example.finalapp.ui.story.StoryFragment"
        android:label="@string/title_story"
        tools:layout="@layout/fragment_story"
        />

    <fragment
        android:id="@+id/navigation_allcharacters"
        android:name="com.example.finalapp.ui.CharacterListFragment"
        android:label="All Characters"
        tools:layout="@layout/characterlist"/>
</navigation>
