<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_placeholder" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TVcartel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/Cartel"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/cartelspinner"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/Cartelnames"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TVprofession"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/profession"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/professionspinner"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/Professionnames"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TVquirk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/quirk"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/quirkspinner"
            android:layout_width="68dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/Quirknames"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="34dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialogAddBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_add"
            android:textColor="#000000" />

        <Button
            android:id="@+id/dialogCancelBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dia_dismiss" />

    </LinearLayout>

</LinearLayout>