<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.StoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvStoryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:text="@string/StoryConflict"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/storybar"
                style="@style/RatingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:indeterminate="false"
                android:max="10"
                android:numStars="10"
                android:rating="0"
                android:stepSize="1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilStory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etStory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/storytext" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvRewardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Rewards"
                android:textColor="#000000"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilRewards"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etRewards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/StoryRewardHint" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tvBackgroundTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BackgroundTitle"
                android:textColor="#000000"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etBackground"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/BackgroundHint" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>